# app-template

./: .dockerignore  .gitignore  .prettierignore  .prettierrc  Makefile  README.md  mkdocs.yml  package.json  pnpm-lock.yaml  pyproject.toml  skills-lock.json
.agents/skills/fastapi/: SKILL.md
.agents/skills/fastapi/references/: dependencies.md  other-tools.md  streaming.md
.agents/skills/shadcn/: SKILL.md  cli.md  customization.md  mcp.md
.agents/skills/shadcn/agents/: openai.yml
.agents/skills/shadcn/rules/: base-vs-radix.md  composition.md  forms.md  icons.md  styling.md
.agents/skills/vercel-react-best-practices/: AGENTS.md  SKILL.md
.agents/skills/vercel-react-best-practices/rules/: advanced-event-handler-refs.md  advanced-init-once.md  advanced-use-latest.md  async-cheap-condition-before-await.md  async-defer-await.md  async-dependencies.md  bundle-conditional.md  (+44 more)
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/src/backend/: api.py  cli.py
backend/src/backend/core/: logger.py  settings.py
backend/static/docs/: swagger.js
client/: eslint.config.ts  package.json  pnpm-lock.yaml  vite.config.ts
client/src/: app.tsx  main.tsx
client/src/lib/: i18n.ts
client/src/routes/: __root.tsx  index.tsx
docker/: docker-compose.yaml  docker-compose.yml
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
docker/server/: Dockerfile
docs/: CHANGELOG.md  index.md
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: main.tsx
frontend/src/routes/: __root.tsx  index.tsx
server/src/server/: main.py
(+7 files in other folders)
