[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "backend"
version = "1.0.0"
requires-python = ">=3.13"
dependencies = ["fastapi[standard]", "pydantic-settings", "sqlmodel", "typer"]

[project.scripts]
api = "backend.api:main"
cli = "backend.cli:main"

[dependency-groups]
data = ["alembic"]

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]
